--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,6 +1,6 @@
 body {
   width: 1180px;
-  height: 875px;
+  height: 755px;
   background-image: url("../images/ignasi_pattern_s.png"); 
 }
 
@@ -38,22 +38,14 @@ h1 {
   background-color: #4aaaa5;
 }
 
-h2 {
-  margin-right: 140px;
-  text-align: right;
-  width: 100%;
-  height: 90px;
-  background-color: green;
 
-}
-
-#cont {
+#about {
   position: relative;
   font-size: 25px;
   margin-left: 30px;
   top: 40px;
   padding-bottom: 35px;
-  padding-right: 490px;
+  padding-right: 460px;
   text-align: left;
   font-weight: bold;
   font-family: 'Georgia', Times, Times New Roman, serif;
@@ -61,86 +53,38 @@ h2 {
   border-bottom: 2px solid #D3D3D3
 } 
 
-#Contact {
+#full {
   float: left;
   margin-left: 90px;
   margin-top: 40px;
   margin-bottom: 40px;
   clear: both;
   width: 650px;
-  height: 600px;
+  height: 480px;
   background-color: white;
   border: 2px solid #D3D3D3
 }
 
-#name {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 18px;
+#pepe {
+  float: left;
+  clear: both;
+  position: relative;
+  height: 150px;
+  left: 30px;
+  top: 105px;
+}
+
+h2 {
+  position: relative;
+  text-overflow: inherit;
   color: #666666;
-  position: relative;
-  top: 100px;
-  margin-left: 30px;
-  width: 585px;
-  height: 35px;
-}
-
-#name2 {
-  position: relative;
-  top: 115px;
-  margin-left: 30px;
-  width: 585px;
-  height: 30px;
-}
-
-#email {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+  top: 105px;
+  left: 40px;
+  width: 600px;
+  margin-right: 10px;
   font-size: 18px;
-  color: #666666;
-  position: relative;
-  top: 130px;
-  margin-left: 30px;
-  width: 585px;
-  height: 35px;
-}
-
-#email2 {
-  position: relative;
-  top: 140px;
-  margin-left: 30px;
-  width: 585px;
-  height: 30px;
-}
-
-#message {
+  line-height: 150%;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 18px;
-  color: #666666;
-  position: relative;
-  top: 155px;
-  margin-left: 30px;
-  width: 585px;
-  height: 200px;
-}
-
-#message2 {
-  position: relative;
-  top: 165px;
-  margin-left: 30px;
-  width: 585px;
-  height: 195px
-}
-
-.submit {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 18px;
-  position: relative;
-  margin-left: 30px;
-  top: 190px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
-  background-color: #4aaaa5;
 }
 
 aside {
@@ -167,6 +111,7 @@ aside {
   margin-left: 30px;
   margin-right: 30px;
 }
+
 
 #linked {
   position:relative;
