--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -1,6 +1,6 @@
 body {
   width: 1180px;
-  height: 875px;
+  height: 1175px;
   background-image: url("../images/ignasi_pattern_s.png"); 
 }
 
@@ -38,22 +38,14 @@ h1 {
   background-color: #4aaaa5;
 }
 
-h2 {
-  margin-right: 140px;
-  text-align: right;
-  width: 100%;
-  height: 90px;
-  background-color: green;
 
-}
-
-#cont {
+#portfolio {
   position: relative;
   font-size: 25px;
   margin-left: 30px;
   top: 40px;
   padding-bottom: 35px;
-  padding-right: 490px;
+  padding-right: 460px;
   text-align: left;
   font-weight: bold;
   font-family: 'Georgia', Times, Times New Roman, serif;
@@ -61,86 +53,127 @@ h2 {
   border-bottom: 2px solid #D3D3D3
 } 
 
-#Contact {
+#full {
   float: left;
   margin-left: 90px;
   margin-top: 40px;
   margin-bottom: 40px;
   clear: both;
   width: 650px;
-  height: 600px;
+  height: 900px;
   background-color: white;
   border: 2px solid #D3D3D3
 }
 
-#name {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 18px;
-  color: #666666;
-  position: relative;
-  top: 100px;
+#gray {
+  float: left;
   margin-left: 30px;
-  width: 585px;
-  height: 35px;
-}
-
-#name2 {
-  position: relative;
-  top: 115px;
-  margin-left: 30px;
-  width: 585px;
-  height: 30px;
-}
-
-#email {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 18px;
-  color: #666666;
-  position: relative;
-  top: 130px;
-  margin-left: 30px;
-  width: 585px;
-  height: 35px;
-}
-
-#email2 {
-  position: relative;
-  top: 140px;
-  margin-left: 30px;
-  width: 585px;
-  height: 30px;
-}
-
-#message {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 18px;
-  color: #666666;
-  position: relative;
-  top: 155px;
-  margin-left: 30px;
-  width: 585px;
+  margin-top: 115px;
+  margin-bottom: 40px;
+  width: 275px;
   height: 200px;
 }
 
-#message2 {
-  position: relative;
-  top: 165px;
-  margin-left: 30px;
-  width: 585px;
-  height: 195px
+#philosophy {
+  position: absolute;
+  top: 405px;
+  left: 122px;
+  width: 275px;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: white;
 }
 
-.submit {
-  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  font-size: 18px;
-  position: relative;
+#circuit {
+  float: left;
   margin-left: 30px;
-  top: 190px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 30px;
-  padding-right: 30px;
+  margin-top: 115px;
+  margin-bottom: 40px;
+  width: 275px;
+  height: 200px;
+}
+
+#technology {
+  position: absolute;
+  top: 405px;
+  left: 427px;
+  width: 275px;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: white;
+}
+
+#cat {
+  float: left;
+  margin-left: 30px;
+  margin-bottom: 40px;
+  width: 275px;
+  height: 200px;
+}
+
+#art {
+  position: absolute;
+  top: 640px;
+  left: 122px;
+  width: 275px;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: white;
+}
+
+#disco {
+  float: left;
+  margin-left: 30px;
+  margin-bottom: 40px;
+  width: 275px;
+  height: 200px;
+}
+
+#nightlife {
+  position: absolute;
+  top: 640px;
+  left: 427px;
+  width: 275px;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: white;
+}
+
+#dj {
+  float: left;
+  margin-left: 30px;
+  width: 275px;
+  height: 200px;
+}
+
+#music {
+  position: absolute;
+  top: 875px;
+  left: 122px;
+  width: 275px;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #4aaaa5;
+  font-family: 'Georgia', Times, Times New Roman, serif;
+  color: white;
 }
 
 aside {
@@ -167,6 +200,7 @@ aside {
   margin-left: 30px;
   margin-right: 30px;
 }
+
 
 #linked {
   position:relative;
